# meta

./: .gitignore  .travis.yml  Cargo.toml  README.md
assets/: better-self-syntax.txt  better-syntax.txt  ebnf-self-syntax.txt  ebnf-syntax.txt  new-self-syntax.txt  old-self-syntax.txt  old-syntax.txt  self-syntax-1.0.txt  self-syntax.txt
benches/: bench.rs  ron.rs
examples/: bootstrap.rs  bootstrap_better.rs  bootstrap_ebnf.rs  bootstrap_old.rs  hello_world.rs  indent.rs  key_value.rs  neg_match.rs
scripts/: id_rsa.enc  travis-doc-upload.cfg
src/: error.rs  error_handler.rs  json.rs  lib.rs  lines.rs  meta_reader.rs  node.rs  number.rs  optimize.rs  optional.rs  parameter.rs  parse_error.rs  parse_error_handler.rs  repeat.rs  rule.rs  search.rs  select.rs  separated_by.rs  sequence.rs  text.rs  token.rs  tokenizer.rs  ty.rs  until_any.rs  until_any_or_whitespace.rs  whitespace.rs
src/bootstrap/: convert.rs  mod.rs  rules.rs
src/meta_rules/: fast_select.rs  indent_settings.rs  lines.rs  mod.rs  node.rs  not.rs  number.rs  optional.rs  repeat.rs  rule.rs  select.rs  separate_by.rs  separated_by.rs  sequence.rs  tag.rs  text.rs  token.rs  until_any.rs  until_any_or_whitespace.rs  whitespace.rs
src/search/: Cargo.toml  README.md
src/search/src/: lib.rs
tests/: lib.rs
