[package]

name = "piston_meta_search"
version = "0.2.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["meta", "language", "search", "piston"]
description = "A search API for piston_meta"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/meta.git"
homepage = "https://github.com/pistondevelopers/meta"

[dependencies.piston_meta]
path = "../../"
version = "0.12.0"

[dependencies]
range = "0.1.1"
